# CyberGuard

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
config/: agent_config.yaml  enterprise_config.yaml  logging_config.yaml  mhc_config.yaml  security_rules.yaml
docker/: Dockerfile  docker-compose.yml
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docs/: ARCHITECTURE.md  agent_design.txt  api_reference.txt  architecture.txt  compliance.txt  deployment_guide.txt  incidence_response.txt  security_model.txt  threat_playbook.txt  training_pipeline.txt  troubleshooting.txt
kubernetes/: configmap.yaml  deployment.yaml  horizontal-pod-autoscaler.yaml  ingress.yaml  namespace.yaml  persistent-volume-claims.yaml  roles.yaml  secrets.yaml  service-accounts.yaml  service.yaml
notebooks/: agent_training.ipynb  mhc_experiments.ipynb  threat_analysis.ipynb
scripts/: deploy_cyberguard.sh  run_security_scan.py  setup_environment.sh  update_threat_feeds.sh
src/: __init__.py
src/agents/: __init__.py  agent_orchestrator.py  base_agent.py  bot_detection_agent.py  code_review_agent.py  compliance_agent.py  exploit_chain_agent.py  forensics_agent.py  incident_response_agent.py  malware_agent.py  threat_detection_agent.py  threat_education_agent.py  traffic_anomaly_agent.py
src/core/: __init__.py  gqa_transformer.py  mhc_architecture.py  model_factory.py  security_encoder.py
src/data_ingestion/: __init__.py  cve_ingestor.py  hash_validator.py  quarantine_pipeline.py  secure_loader.py  threat_feeds.py
src/deployment/: __init__.py  api_middleware.py  reverse_proxy.py  security_dashboard.py  website_plugin.py
src/inference/: __init__.py  inference_engine.py  inference_result.py  response_parser.py  threat_inference.py
src/training/: __init__.py  adversarial_training.py  agent_trainer.py  gqa_trainer.py  mhc_trainer.py  security_dataset.py
src/ui/: __init__.py  ui_usage.py
src/ui/api/: rest_api.py  webhook_handler.py  websocket_handler.py
src/ui/frontend/: alerts.py  dashboard.py  tutor_mode.py
src/utils/: __init__.py  compliance_utils.py  crypto_utils.py  logging_utils.py  security_utils.py
src/web_security/: __init__.py  api_analyzer.py  form_validator.py  header_analyzer.py  javascript_analyzer.py  scanner.py  traffic_parser.py  vulnerability_detector.py
tests/: __init__.py  adversarial_tests.py  conftest.py  load_tests.py  test_agents.py  test_gqa.py  test_mhc.py  test_security.py  test_utils.py
