# CyberGuard Web Security AI System - Project Configuration
# ========================================================

[project]
# Basic project metadata
name = "cyberguard"
version = "1.0.0"
description = "Intelligent Web Threat Analysis & Defense Platform"
readme = "README.md"
authors = [
    {name = "CyberGuard Team", email = "security@cyberguard.example.com"}
]
license = {text = "Apache 2.0"}
keywords = ["cybersecurity", "web-security", "ai", "threat-detection", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
    "fastapi>=0.100.0,<0.101.0",
    "uvicorn[standard]>=0.23.0,<0.24.0",
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "loguru>=0.7.0,<0.8.0",
    "redis>=4.5.0,<5.0.0",
    "elasticsearch>=8.9.0,<9.0.0",
]

[project.optional-dependencies]
# Optional dependencies for specific features
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "bandit>=1.7.5",
]

dashboard = [
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "dash>=2.14.0",
    "flask>=2.3.0",
]

ai = [
    "openai>=0.27.0",
    "anthropic>=0.3.0",
    "langchain>=0.0.200",
    "llama-index>=0.8.0",
    "sentence-transformers>=2.2.0",
]

security = [
    "paramiko>=3.2.0",
    "ssdeep>=3.4",
    "yara-python>=4.2.0",
    "scrapy>=2.10.0",
    "selenium>=4.10.0",
]

monitoring = [
    "prometheus-client>=0.17.0",
    "sentry-sdk>=1.30.0",
]

docker = [
    "docker>=6.1.0",
    "kubernetes>=26.1.0",
]

full = [
    "cyberguard[dev]",
    "cyberguard[dashboard]",
    "cyberguard[ai]",
    "cyberguard[security]",
    "cyberguard[monitoring]",
    "cyberguard[docker]",
]

[project.urls]
Homepage = "https://cyberguard.example.com"
Repository = "https://github.com/cyberguard/cyberguard"
Documentation = "https://docs.cyberguard.example.com"
Issues = "https://github.com/cyberguard/cyberguard/issues"
Changelog = "https://github.com/cyberguard/cyberguard/releases"

[project.scripts]
# Command-line entry points
cyberguard = "cyberguard.main:main"
cyberguard-scan = "cyberguard.cli.scan:main"
cyberguard-dashboard = "cyberguard.cli.dashboard:main"
cyberguard-api = "cyberguard.cli.api:main"
cyberguard-train = "cyberguard.cli.train:main"

[project.entry-points."cyberguard.plugins"]
# Plugin system entry points
threat-detection = "cyberguard.plugins.threat_detection:ThreatDetectionPlugin"
traffic-analysis = "cyberguard.plugins.traffic_analysis:TrafficAnalysisPlugin"
malware-detection = "cyberguard.plugins.malware_detection:MalwareDetectionPlugin"

[build-system]
# Build system requirements
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Package discovery configuration
packages = ["cyberguard", "cyberguard.*"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
# Include non-Python files in the distribution
"cyberguard" = [
    "py.typed",  # For type checking
    "*.yaml",    # Configuration files
    "*.json",    # Data files
    "templates/*.html",  # HTML templates
    "static/**/*",  # Static assets
]

[tool.black]
# Black code formatter configuration
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs         # Exclude eggs directory
  | \.git        # Exclude git directory
  | \.hg         # Exclude mercurial directory
  | \.mypy_cache # Exclude mypy cache
  | \.tox        # Exclude tox directory
  | \.venv       # Exclude virtual environment
  | _build       # Exclude build directory
  | buck-out     # Exclude buck output
  | build        # Exclude build directory
  | dist         # Exclude distribution directory
)/
'''

[tool.isort]
# Import sorting configuration
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
# MyPy type checking configuration
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=cyberguard",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "security: security tests",
    "performance: performance tests",
]

[tool.coverage.run]
# Coverage.py configuration
source = ["cyberguard"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
# Ruff linter configuration
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "*.pyi",
]
per-file-ignores = {}
unfixable = []

[tool.ruff.per-file-ignores]
# Specific file ignores
"__init__.py" = ["F401"]  # unused import in __init__.py

# Project-specific configuration
[tool.cyberguard]
# Custom CyberGuard project settings
default_environment = "development"
log_level = "INFO"
max_workers = 4
enable_telemetry = false
telemetry_endpoint = "https://telemetry.cyberguard.example.com"